--- a/General_Studies_Books.html
+++ b/General_Studies_Books.html
@@ -80,8 +80,9 @@
     }
   </style>
 </head>
+   
 <body oncontextmenu="return false;"> <!-- राइट-क्लिक ब्लॉक -->
-  <div class="dropdown-container">
+ <center> <div class="dropdown-container">
     <select id="subjectDropdown" onchange="onSubjectChange()">
       <option value="">Select Subject</option>
     </select>
@@ -97,7 +98,7 @@
     <button class="view-pdf-btn" onclick="viewPDF()">View PDF</button>
   </div>
 
-  <div id="pdfViewer"></div>
+  <div id="pdfViewer"></div></center>
 
   <script>
     const githubBaseURL = "https://softedge12.github.io/sarkarifileportaltrial/gspdfsubjects/";
