--- a/General_Studies_Books.html
+++ b/General_Studies_Books.html
@@ -10,7 +10,7 @@
   <div id="navbar"></div>
   <div class="section">
     <h1>Welcome to the Educational Website</h1>
-    <p>This is the home section. Explore our resources to learn and grow!</p>
+    <p>This is the home section. ram Explore our resources to learn and grow!</p>
 <title>PDF Viewer with Scroll</title>
   <style>
     body {
