--- a/General_Studies_Mock_Test.html
+++ b/General_Studies_Mock_Test.html
@@ -175,6 +175,12 @@
 
 
 </body>
+
+</div>
+
+
+
+    
  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth-compat.js"></script>
