--- a/General_Studies_Mock_Test.html
+++ b/General_Studies_Mock_Test.html
@@ -33,6 +33,7 @@
       flex-wrap: wrap;
       margin: 10px 0;
       width: 100%;
+      margin-top: 10px;
     }
 
     .dropdown-container select {
@@ -52,22 +53,7 @@
       position: relative;
     }
 
-    .view-pdf-btn {
-      background-color: #007bff;
-      padding: 10px 20px;
-      font-size: 14px;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-left: 10px;
-      transition: background-color 0.3s ease;
-    }
-
-    .view-pdf-btn:hover {
-      background-color: #008cff;
-    }
-
+   
     @media (max-width: 768px) {
       .dropdown-container {
         flex-direction: column;
