--- a/General_Studies_Mock_Test.html
+++ b/General_Studies_Mock_Test.html
@@ -33,8 +33,7 @@
       flex-wrap: wrap;
       margin: 10px 0;
       width: 100%;
-      margin-top: 10px;
-    }
+        }
 
     .dropdown-container select {
       padding: 10px;
@@ -43,6 +42,10 @@
       border-radius: 5px;
       width: 200px;
     }
+
+  #quizDropdown {
+  margin-top: 10px; /* केवल इस ड्रॉपडाउन को नीचे करेगा */
+}
 
     #pdfViewer {
       margin-top: 20px;
