--- a/General_Studies_Mock_Test.html
+++ b/General_Studies_Mock_Test.html
@@ -43,9 +43,8 @@
       width: 200px;
     }
 
-  #quizDropdown {
-  margin-top: 20px; /* केवल इस ड्रॉपडाउन को नीचे करेगा */
-}
+ #quizDropdown {
+  margin-bottom: 15px; 
 
     #pdfViewer {
       margin-top: 20px;
