--- a/General_Studies_Audio_Books.html
+++ b/General_Studies_Audio_Books.html
@@ -9,7 +9,7 @@
 <body>
   <div id="navbar"></div>
   <div class="section">
-    <h1>Notifications Section</h1>
+    <h1>General Studies Audio Book</h1>
     <p>Stay updated with the latest news and announcements.</p>
     <title>Audio Player</title>
   <style>
