--- a/welcome.html
+++ b/welcome.html
@@ -38,7 +38,45 @@
   <div class="section" id="quiz">
     <h1>Quiz Section</h1>
     <p>Test your knowledge with our fun and interactive quizzes!</p>
-    <iframe src="https://softedge12.github.io/quizdropdowntrial/" width="100%" height="800" style="border:1px solid black;"></iframe>
+    <title>Single Quiz Viewer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f9;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 800px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 1200px) {
+      iframe {
+        height: 700px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Single Quiz Viewer</h1>
+
+  <!-- क्विज़ दिखाने के लिए iframe -->
+  <iframe src="gsquizsubjects/history/part1/history1quiz.html"></iframe>
+
+</body>
+</html>
   </div>
 
   <!-- Book Section -->
