--- a/welcome.html
+++ b/welcome.html
@@ -28,29 +28,28 @@
   </div>
 
   <!-- Home Section -->
-  <div class="section active" id="home">
+<div class="section active" id="home">
     <h1>Welcome to the Educational Website</h1>
     <p>This is the home section. Explore our resources to learn and grow!</p>
-   <body>
 
     <h2>PDF Viewer</h2>
-    <div id="pdfViewer"></div>
+    <div id="pdfViewerHome"></div>
 
     <script>
         // GitHub Repository Base URL
         const githubBaseURL = "https://softedge12.github.io/sarkarifileportaltrial/gspdfsubjects/";
 
         // मैन्युअली सेट की गई PDF फ़ाइल का पथ
-        const subject = "Mathematics";  // Subject Name
-        const chapter = "Algebra";      // Chapter Name
-        const pdfName = "algebra1.pdf"; // PDF File Name
+        const subjectHome = "Mathematics";  // Subject Name
+        const chapterHome = "Algebra";      // Chapter Name
+        const pdfNameHome = "algebra1.pdf"; // PDF File Name
 
         // PDF का पूरा URL बनाना
-        const pdfUrl = `${githubBaseURL}${subject}/${chapter}/${pdfName}`;
+        const pdfUrlHome = `${githubBaseURL}${subjectHome}/${chapterHome}/${pdfNameHome}`;
 
         // Google Docs Viewer के माध्यम से PDF दिखाना
-        function displayPDF(pdfUrl) {
-            const pdfViewer = document.getElementById("pdfViewer");
+        function displayPDFHome(pdfUrl) {
+            const pdfViewer = document.getElementById("pdfViewerHome");
             pdfViewer.innerHTML = ''; // पहले का कंटेंट हटाएं
 
             if (pdfUrl) {
@@ -59,7 +58,7 @@
                 const iframe = document.createElement("iframe");
                 iframe.src = googleDocsUrl;
                 iframe.width = "100%";
-                iframe.height = "100%";
+                iframe.height = "600px";
                 iframe.style.border = "none";
                 iframe.setAttribute("sandbox", "allow-scripts allow-same-origin allow-forms");
 
@@ -70,11 +69,10 @@
         }
 
         // PDF दिखाने के लिए फ़ंक्शन कॉल करें
-        displayPDF(pdfUrl);
+        displayPDFHome(pdfUrlHome);
     </script>
+</div>
 
-</body>
-  </div>
 
   <!-- Quiz Section -->
   <div class="section" id="quiz">
