--- a/welcome.html
+++ b/welcome.html
@@ -124,45 +124,8 @@
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
 
-    <h2>PDF Viewer (Book)</h2>
-    <div id="pdfViewerBook"></div>
-
-    <script>
-        // GitHub Repository Base URL for Book Section
-        const githubBaseURL_Book = "https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/";
-
-        // PDF Path for Book Section
-        const subjectBook = "Mathematics";  
-        const chapterBook = "Algebra";      
-        const pdfNameBook = "algebra1.pdf"; 
-
-        // Construct Book PDF URL
-        const pdfUrlBook = `${githubBaseURL_Book}${subjectBook}/${chapterBook}/${pdfNameBook}`;
-
-        function displayPDFBook(pdfUrl) {
-            const pdfViewer = document.getElementById("pdfViewerBook");
-            pdfViewer.innerHTML = ''; 
-
-            if (pdfUrl) {
-                const googleDocsUrl = `https://docs.google.com/viewer?embedded=true&url=${encodeURIComponent(pdfUrl)}`;
-
-                const iframe = document.createElement("iframe");
-                iframe.src = googleDocsUrl;
-                iframe.width = "100%";
-                iframe.height = "600px";
-                iframe.style.border = "none";
-                iframe.setAttribute("sandbox", "allow-scripts allow-same-origin allow-forms");
-
-                pdfViewer.appendChild(iframe);
-            } else {
-                alert("PDF File Not Found!");
-            }
-        }
-
-        // Load Book PDF
-        displayPDFBook(pdfUrlBook);
-    </script>
-</div>
+   <iframe src="https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf"
+        width="100%" height="600px" style="border: none;"></iframe></div>
 
   <!-- Notification Section -->
   <div class="section" id="notification">
