--- a/welcome.html
+++ b/welcome.html
@@ -32,8 +32,46 @@
     <h1>Home Section</h1>
     <p>Welcome to the home section. Explore PDFs here.</p>
 
-  <iframe src="https://softedge12.github.io/sarkarifileportaltrial/gspdfsubjects/Mathematics/Algebra/algebra1.pdf"
-        width="100%" height="600px" style="border: none;"></iframe></div>
+<div id="pdf-viewer" style="width: 100%; height: 600px;"></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
+<script>
+    var url = 'https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf';
+
+    var loadingTask = pdfjsLib.getDocument(url);
+    loadingTask.promise.then(function(pdf) {
+        pdf.getPage(1).then(function(page) {
+            var scale = 1.5;
+            var viewport = page.getViewport({ scale: scale });
+
+            var canvas = document.createElement("canvas");
+            document.getElementById("pdf-viewer").appendChild(canvas);
+
+            var context = canvas.getContext("2d");
+            canvas.height = viewport.height;
+            canvas.width = viewport.width;
+
+            var renderContext = {
+                canvasContext: context,
+                viewport: viewport
+            };
+            page.render(renderContext);
+        });
+    });
+
+    // Disable Right-Click
+    document.addEventListener("contextmenu", function(event) {
+        event.preventDefault();
+    });
+
+    // Disable Ctrl+P, Ctrl+S
+    document.addEventListener("keydown", function(event) {
+        if (event.ctrlKey && (event.key === 'p' || event.key === 's' || event.key === 'u')) {
+            event.preventDefault();
+        }
+    });
+</script>
+
 </div>
 
 
