--- a/welcome.html
+++ b/welcome.html
@@ -32,45 +32,28 @@
     <h1>Home Section</h1>
     <p>Welcome to the home section. Explore PDFs here.</p>
 
-<div id="pdf-viewer" style="width: 100%; height: 600px;"></div>
+<div oncontextmenu="return false;" style="pointer-events: none;">
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf"
+            width="100%" height="600px"
+            style="border: none; pointer-events: auto;"
+            sandbox="allow-scripts allow-same-origin">
+    </iframe>
+</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.min.js"></script>
 <script>
-    var url = 'https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf';
-
-    var loadingTask = pdfjsLib.getDocument(url);
-    loadingTask.promise.then(function(pdf) {
-        pdf.getPage(1).then(function(page) {
-            var scale = 1.5;
-            var viewport = page.getViewport({ scale: scale });
-
-            var canvas = document.createElement("canvas");
-            document.getElementById("pdf-viewer").appendChild(canvas);
-
-            var context = canvas.getContext("2d");
-            canvas.height = viewport.height;
-            canvas.width = viewport.width;
-
-            var renderContext = {
-                canvasContext: context,
-                viewport: viewport
-            };
-            page.render(renderContext);
-        });
-    });
-
-    // Disable Right-Click
+    // राइट-क्लिक को ब्लॉक करना
     document.addEventListener("contextmenu", function(event) {
         event.preventDefault();
     });
 
-    // Disable Ctrl+P, Ctrl+S
+    // कीबोर्ड शॉर्टकट ब्लॉक करना (Ctrl+P, Ctrl+S आदि)
     document.addEventListener("keydown", function(event) {
         if (event.ctrlKey && (event.key === 'p' || event.key === 's' || event.key === 'u')) {
             event.preventDefault();
         }
     });
 </script>
+
 
 </div>
 
@@ -126,8 +109,7 @@
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
 
-   <iframe src="https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf"
-        width="100%" height="600px" style="border: none;"></iframe></div>
+ 
 
   <!-- Notification Section -->
   <div class="section" id="notification">
