--- a/welcome.html
+++ b/welcome.html
@@ -33,7 +33,7 @@
     <p>Welcome to the home section. Explore PDFs here.</p>
 
 <div oncontextmenu="return false;" style="pointer-events: none;">
-    <iframe src="https://docs.google.com/gview?embedded=true&url=https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf"
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://softedge12.github.io/sarkarifileportaltrial/gspdfsubjects/Mathematics/Algebra/algebra1.pdf"
             width="100%" height="600px"
             style="border: none; pointer-events: auto;"
             sandbox="allow-scripts allow-same-origin">
@@ -108,8 +108,29 @@
 <div class="section" id="book">
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
+<div oncontextmenu="return false;" style="pointer-events: none;">
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://softedge12.github.io/sarkarifileportaltrial/gspdfsummarysubjects/Mathematics/Algebra/algebra1.pdf"
+            width="100%" height="600px"
+            style="border: none; pointer-events: auto;"
+            sandbox="allow-scripts allow-same-origin">
+    </iframe>
+</div>
 
- 
+<script>
+    // राइट-क्लिक को ब्लॉक करना
+    document.addEventListener("contextmenu", function(event) {
+        event.preventDefault();
+    });
+
+    // कीबोर्ड शॉर्टकट ब्लॉक करना (Ctrl+P, Ctrl+S आदि)
+    document.addEventListener("keydown", function(event) {
+        if (event.ctrlKey && (event.key === 'p' || event.key === 's' || event.key === 'u')) {
+            event.preventDefault();
+        }
+    });
+</script>
+
+ </div>
 
   <!-- Notification Section -->
   <div class="section" id="notification">
