--- a/welcome.html
+++ b/welcome.html
@@ -33,7 +33,7 @@
     <p>Welcome to the home section. Explore PDFs here.</p>
 
 <div oncontextmenu="return false;" style="pointer-events: none;">
-    <iframe src="https://docs.google.com/gview?embedded=true&url=https://softedge12.github.io/sarkarifileportaltrial/gspdfsubjects/Mathematics/Algebra/algebra1.pdf"
+    <iframe src="https://lessonpdftrial.pages.dev/"
             width="100%" height="600px"
             style="border: none; pointer-events: auto;"
             sandbox="allow-scripts allow-same-origin">
