--- a/welcome.html
+++ b/welcome.html
@@ -32,12 +32,8 @@
     <h1>Home Section</h1>
     <p>Welcome to the home section. Explore PDFs here.</p>
 
-<div oncontextmenu="return false;" style="pointer-events: none;">
-    <iframe src="https://lessonpdftrial.pages.dev/"
-            width="100%" height="600px"
-            style="border: none; pointer-events: auto;"
-            sandbox="allow-scripts allow-same-origin">
-    </iframe>
+
+<center><iframe src="https://lessonpdftrial.pages.dev/" width="600" height="500" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
 </div>
 
 
@@ -92,12 +88,7 @@
 <div class="section" id="book">
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
-<div oncontextmenu="return false;" style="pointer-events: none;">
-    <iframe src="https://lessonpdftrial.pages.dev/"
-            width="100%" height="600px"
-            style="border: none; pointer-events: auto;"
-            sandbox="allow-scripts allow-same-origin">
-    </iframe>
+<center><iframe src="https://lessonpdftrial.pages.dev/" width="600" height="500" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
 </div>
 
 
