--- a/welcome.html
+++ b/welcome.html
@@ -31,7 +31,7 @@
   <div class="section active" id="home">
     <h1>Welcome to the Educational Website</h1>
     <p>This is the home section. Explore our resources to learn and grow!</p>
-    <center><iframe src="https://softedge12.github.io/lessonpdftrial/" width="100%" height="800" style="border:none;"></iframe></center>
+    <center><iframe src="https://lessonpdftrial.pages.dev/" width="100%" height="800" style="border:none;"></iframe></center>
   </div>
 
   <!-- Quiz Section -->
@@ -45,7 +45,7 @@
   <div class="section" id="book">
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
-     <center><iframe src="https://softedge12.github.io/lessonpdftrial/" width="100%" height="600" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
+     <center><iframe src="https://lessonpdftrial.pages.dev/" width="100%" height="600" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
     
   </div>
 
