--- a/welcome.html
+++ b/welcome.html
@@ -31,58 +31,23 @@
   <div class="section active" id="home">
     <h1>Welcome to the Educational Website</h1>
     <p>This is the home section. Explore our resources to learn and grow!</p>
-    <center><iframe src="https://lessonpdftrial.pages.dev/" width="100%" height="800" style="border:none;"></iframe></center>
+    <center><iframe src="gspdfsubjects/Mathematics/Algebra/algebra1.pdf" width="100%" height="800" style="border:none;"></iframe></center>
   </div>
 
   <!-- Quiz Section -->
   <div class="section" id="quiz">
     <h1>Quiz Section</h1>
     <p>Test your knowledge with our fun and interactive quizzes!</p>
-     <title>Single Quiz Viewer</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f9;
-    }
 
-    h1 {
-      text-align: center;
-      color: #333;
-      margin-bottom: 20px;
-    }
+  <center><iframe src="gsquizsubjects/history/part1/history3quiz.html" width="100%" height="800" style="border:none;"></iframe></center>
 
-    iframe {
-      width: 100%;
-      height: 800px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 1200px) {
-      iframe {
-        height: 700px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Single Quiz Viewer</h1>
-
-  <!-- क्विज़ दिखाने के लिए iframe -->
-  <iframe src="gsquizsubjects/history/part1/history3quiz.html"></iframe>
-
-</body>
   </div>
 
   <!-- Book Section -->
   <div class="section" id="book">
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
-     <center><iframe src="https://lessonpdftrial.pages.dev/" width="100%" height="600" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
+     <center><iframe src="gspdfsubjects/Mathematics/Algebra/algebra2.pdf" width="100%" height="800" style="border:none;"></iframe></center>
     
   </div>
 
