--- a/welcome.html
+++ b/welcome.html
@@ -31,7 +31,8 @@
   <div class="section active" id="home">
     <h1>Welcome to the Educational Website</h1>
     <p>This is the home section. Explore our resources to learn and grow!</p>
-    <center><iframe src="gspdfsubjects/Mathematics/Algebra/algebra1.pdf" width="600" height="500" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
+    <center><iframe src="gspdfsubjects/Mathematics/Algebra/algebra1.pdf" width="600" height="500" style="border: none; overflow: auto;" oncontextmenu="return false;"></iframe></center>
+
   </div>
 
   <!-- Quiz Section -->
