--- a/welcome.html
+++ b/welcome.html
@@ -47,8 +47,7 @@
   <div class="section" id="book">
     <h1>Books Section</h1>
     <p>Discover a variety of educational books to enhance your skills.</p>
-     <center><iframe src="gspdfsubjects/Mathematics/Algebra/algebra2.pdf" width="100%" height="800" style="border:none;"></iframe></center>
-    
+      <center><iframe src="https://drive.google.com/file/d/1rvJ8ip-KAUdlZVi-oZEOtr8vpwJHQDqi/preview?usp=sharing" width="100%" height="600" style="border: none; overflow: auto;" oncontextmenu="return false;" sandbox="allow-scripts allow-same-origin"></iframe></center>
   </div>
 
   <!-- Notification Section -->
